--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-02-02
+% \update      2018-08-25
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -230,6 +230,13 @@
    and a name can be given to each for clarity.
    Some day \textsl{Sequencer64} will support an 8x8 grid and 64 patterns per
    screen set.
+
+\subsubsection{Concepts / Terms / bank}
+\label{subsubsec:concepts_terms_bank}
+
+   \index{bank}
+   The term \textsl{bank} comes from the \textsl{Kepler34} application.
+   It means the same thing as \textsl{screen set}.
 
 \subsubsection{Concepts / Terms / sequence}
 \label{subsubsec:concepts_terms_sequence}
