Initial updates for version 0.96.0, tex only.

--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-08-25
+% \update      2018-09-15
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.95.2}
+\title{Sequencer64 User Manual 0.96.0}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -79,8 +79,10 @@
 \label{sec:introduction}
 
    This document describes \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.95.2,
-   the latest commit from the \textbf{master} branch.
+   \cite{sequencer64}, through version 0.96.0,
+   which is not yet official.  To get it, check out
+   the latest commit from the \textbf{playlist} branch.
+%  the latest commit from the \textbf{master} branch.
    If one is impatient to get started mastering \textsl{Sequencer64},
    lhen proceed to \sectionref{subsec:introduction_lets_get_started}.
    The following projects support \textsl{Sequencer64}:
